Fix CORS preflight headers, strip trailing slashes, and configure Render dynamic port